# dcproj

./: CMakeLists.txt  CMakeSettings.json  README  README.md  beam.scal_vec..vtk  configdoxygen  configdoxygen (copy)  dcproj.cpp  dcproj.h  dcproj.kdev4  els-132-c3.txt  els-381.txt  els-414.txt  els-445.txt  els-606.txt  els-cho.txt  els1k.txt  epsppostnew.txt  loadvsdisplacementlu.txt  loadvsdisplacementnew.txt  malha287.txt  matrix.nb  mesh-445.txt  mesh.nb  mesh381.txt  meshcoords.txt  meshcoordsbeam.txt  meshtopology.txt  nodes-606.txt  nodes-pressure-fino.txt  nos-287.txt  nos-381.txt  nos-912.txt  nos-cho.txt  one-el-p2-els.txt  one-el-p2-nodes-debug.txt  one-el-p2-nodes-v2.txt  one-el-p2-nodes.txt  ordering.nb  pressurizedring.scal_vec.vtk  (+120 more)
.kdev4/: dcproj.kdev4
builddebug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
buildrelease/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  dcproj
data/: README  beam3D-elements.txt  beam3D-nodes.txt  coords2x1.txt  coords2x1h5.txt  coords2x1h5fine.txt  deter.txt  elements-pressure-fino.txt  els-287.txt  els-2k.txt  els-912.txt  els-unstructured.txt  gnuplot-contour-plot  matrix.nb  mesh-el952-no2k.msh  meshcoords.txt  meshtopology.txt  meshtopologybeam.txt  nodes-2k.txt  nodes-unstructured.txt  nodes1k.txt  nos-132-c3.txt  nos-414.txt  nos-445.txt  quad.msh  slope  slope-saida-fina1.scal_vec.vtk  slope-saida-fina11.scal_vec.vtk  slope-saida-fina13.scal_vec.vtk  slope-saida-fina14.scal_vec.vtk  slope-saida-fina2.scal_vec.vtk  slope-saida-fina23.scal_vec.vtk  slope-saida-fina24.scal_vec.vtk  slope-saida-fina25.scal_vec.vtk  slope-saida-fina27.scal_vec.vtk  slope-saida-fina29.scal_vec.vtk  slope-saida-fina3.scal_vec.vtk  slope-saida-fina31.scal_vec.vtk  slope-saida-fina32.scal_vec.vtk  slope-saida-fina39.scal_vec.vtk  (+15 more)
html/: KLGalerkinRF_8h_source.html  _k_l_galerkin_r_f_8cpp.html  _k_l_galerkin_r_f_8cpp__incl.map  _k_l_galerkin_r_f_8cpp__incl.md5  _k_l_galerkin_r_f_8cpp_source.html  _k_l_galerkin_r_f_8h.html  _k_l_galerkin_r_f_8h__dep__incl.map  _k_l_galerkin_r_f_8h__dep__incl.md5  _k_l_galerkin_r_f_8h__incl.map  _k_l_galerkin_r_f_8h__incl.md5  _k_l_galerkin_r_f_8h_source.html  _s_f_e_m_8cpp.html  _s_f_e_m_8cpp__incl.map  _s_f_e_m_8cpp__incl.md5  _s_f_e_m_8cpp_source.html  annotated.html  beam3dtools_8cpp.html  beam3dtools_8cpp__incl.map  beam3dtools_8cpp__incl.md5  beam3dtools_8cpp_source.html  beam3dtools_8h.html  beam3dtools_8h__dep__incl.map  beam3dtools_8h__dep__incl.md5  beam3dtools_8h__incl.map  beam3dtools_8h__incl.md5  beam3dtools_8h_source.html  cholesky_8h.html  cholesky_8h__dep__incl.map  cholesky_8h__dep__incl.md5  cholesky_8h__incl.map  cholesky_8h__incl.md5  cholesky_8h_source.html  classKLGalerkinRF-members.html  classKLGalerkinRF.html  classKLGalerkinRF__coll__graph.map  classKLGalerkinRF__coll__graph.md5  classKLGalerkinRF__inherit__graph.map  classKLGalerkinRF__inherit__graph.md5  classNRMat3d-members.html  classNRMat3d.html  (+673 more)
latex/: _k_l_galerkin_r_f_8cpp.tex  _k_l_galerkin_r_f_8cpp__incl.md5  _k_l_galerkin_r_f_8h.tex  _k_l_galerkin_r_f_8h__dep__incl.md5  _k_l_galerkin_r_f_8h__incl.md5  _s_f_e_m_8cpp.tex  _s_f_e_m_8cpp__incl.md5  annotated.tex  beam3dtools_8cpp.tex  beam3dtools_8cpp__incl.md5  beam3dtools_8h.tex  beam3dtools_8h__dep__incl.md5  beam3dtools_8h__incl.md5  cholesky_8h.tex  cholesky_8h__dep__incl.md5  cholesky_8h__incl.md5  classKLGalerkinRF.tex  classKLGalerkinRF__coll__graph.md5  classKLGalerkinRF__inherit__graph.md5  classNRMat3d.tex  classNRmatrix.tex  classNRmatrix3D.tex  classNRtensor.tex  classNRvector.tex  classSynchronizedFile.tex  classVTKGraphMesh.tex  classVTKGraphMesh__coll__graph.md5  classWriter.tex  class_k_l_galerkin_r_f.tex  class_k_l_galerkin_r_f__coll__graph.md5  class_k_l_galerkin_r_f__inherit__graph.md5  class_n_r_mat3d.tex  class_n_rmatrix.tex  class_n_rmatrix3_d.tex  class_n_rmatrix3_d__coll__graph.md5  class_n_rtensor.tex  class_n_rvector.tex  class_synchronized_file.tex  class_v_t_k_graph_mesh.tex  class_v_t_k_graph_mesh__coll__graph.md5  (+230 more)
output/: load-vs-displacement0.nb  load-vs-displacement133.nb  load-vs-displacement199.nb  load-vs-displacement265.nb  load-vs-displacement331.nb  load-vs-displacement397.nb  load-vs-displacement398.nb  load-vs-displacement463.nb  load-vs-displacement529.nb  load-vs-displacement595.nb  load-vs-displacement661.nb  load-vs-displacement67.nb  load-vs-displacement727.nb  load-vs-displacement728.nb  load-vs-displacement793.nb  load-vs-displacement859.nb  load-vs-displacement925.nb  load-vs-displacement926.nb  slope-gim-mc-tri0.scal_vec.vtk  slope-gim-mc-tri133.scal_vec.vtk  slope-gim-mc-tri199.scal_vec.vtk  slope-gim-mc-tri265.scal_vec.vtk  slope-gim-mc-tri331.scal_vec.vtk  slope-gim-mc-tri397.scal_vec.vtk  slope-gim-mc-tri463.scal_vec.vtk  slope-gim-mc-tri529.scal_vec.vtk  slope-gim-mc-tri595.scal_vec.vtk  slope-gim-mc-tri661.scal_vec.vtk  slope-gim-mc-tri67.scal_vec.vtk  slope-gim-mc-tri727.scal_vec.vtk  slope-gim-mc-tri793.scal_vec.vtk  slope-gim-mc-tri859.scal_vec.vtk  slope-gim-mc-tri925.scal_vec.vtk
randomfielddataLx20-Ly2-lognormal/: datarandom.txt
src/: .beam3dtools.cpp.kate-swp  .vtkmesh.cpp.kate-swp  KLGalerkinRF.cpp  KLGalerkinRF.h  SFEM.cpp  beam3dtools.cpp  beam3dtools.h  cholesky.h  dcproj.cpp  dcproj.h  druckerprager.cpp  druckerprager.h  eigen_sym.h  eigen_unsym.cpp  eigen_unsym.h  elastmat2D.cpp  elastmat2D.h  elastoplastic2D.cpp  elastoplastic2D.h  elastoplastic3D.cpp  elastoplastic3D.h  elastoplasticbase.cpp  elastoplasticbase.h  error.cpp  error.h  (+31 more)
(+162 files in other folders)
